# cv-tuner

./: .dockerignore  .env.md  .gitignore  Dockerfile  Dockerfile.latexmk  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  tool_description.md
.github/workflows/: release.yml
example/: cv.tex  llm_experience.md  llm_job_description.md  raw_job_description.md  system_prompt.md  tool_call.json
prompts/: experience.md  system_prompt.md  system_prompt_cover_letter.md  task.md  test_cover_letter.json  test_experience.json
scripts/: build_docker_latex.sh  build_push_app.sh
src/: context.py  cv_renderer.py  html_cv_renderer.py  jinja_renderer.py  latex_cv_renderer.py  local_file_loader.py  models.py  renderer.py
src/ai/: agent.py  executor.py  tools.py
src/ui/: streamlit.py
template/html/: cover_letter.html  cv.html
template/latex/: cv.tex.jinja
template/prompt/: current_experience.md.jinja  job_description.md.jinja
tests/: fake_executor.py  test_e2e.py  test_real.py
