[project]
name = "cv-tuner"
version = "0.0.1"
description = "GenAI application to adjust your work experience to the desired job listing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.11.9",
    "jinja2==3.1.6",
    "langchain==0.3.27",
    "langgraph==0.6.7",
    "langchain-openai==0.3.27",
    "streamlit==1.49.0",
    "streamlit-pdf==1.0.7",
    "weasyprint==66.0"
]

[dependency-groups]
test = [
    "pytest==8.4.2",
    "pytest-cov==4.0.0"
]

dev = [
    "ruff==0.13.2",
    "pyright==1.1.405"
]
